----------------------------------------------------------------------
Wed Mar 10 17:58:14 2004                        Michael Jennings (mej)

Added array and dlinked_list implementations of the map interface.
----------------------------------------------------------------------
Wed Mar 10 18:05:28 2004                        Michael Jennings (mej)

Fix "make distcheck"
----------------------------------------------------------------------
Tue Jun 29 17:14:13 2004                        Michael Jennings (mej)

Some small fixes suggested by Charlie Gordon <gmane@chqrlie.org>.
Minor build tweaks...updated to new release number.

----------------------------------------------------------------------
Tue Jun 29 17:23:34 2004                        Michael Jennings (mej)

Oops, forgot some re-ordering.
----------------------------------------------------------------------
Fri Jul 16 19:20:48 2004                        Michael Jennings (mej)

Working on cleaning some things up for portability and C99-compliance.
----------------------------------------------------------------------
Tue Jul 20 18:30:54 2004                        Michael Jennings (mej)

Tasty treats!
----------------------------------------------------------------------
Wed Jul 21 18:16:43 2004                        Michael Jennings (mej)

Mmmm, beefy.
----------------------------------------------------------------------
Wed Jul 21 22:48:14 2004                        Michael Jennings (mej)

More cleanups and fixed compile problems.
----------------------------------------------------------------------
Fri Jul 23 17:36:45 2004                        Michael Jennings (mej)

Finally we have strict C99 compliance.
----------------------------------------------------------------------
Thu Aug 19 17:23:32 2004                        Michael Jennings (mej)

Patch from Roland Illig <roland.illig@gmx.de> to fix m4 quoting.
----------------------------------------------------------------------